fixed color contrast issues on links and dates

--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -1,5 +1,5 @@
-$red: #de4e43;
-$blue: #4f89a1;
+$red: #d9352a;
+$blue: #45768b;
 $light-blue: #b1d1e0;
 $lightest-blue: #faffff;
 $yellow: #edb951;
